--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ argparse==1.2.1
 distribute==0.7.3
 itsdangerous==0.24
 oauthlib==0.7.2
+psycopg2==2.6.1
 requests==2.7.0
 requests-oauthlib==0.5.0
 wsgiref==0.1.2
