--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ distribute==0.7.3
 itsdangerous==0.24
 oauthlib==0.7.2
 psycopg2==2.6.1
+python-dateutil==2.4.2
 requests==2.7.0
 requests-oauthlib==0.5.0
+six==1.9.0
 wsgiref==0.1.2
