--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: true
 language: python
 python:
   - "2.7"
+
 addons:
   apt:
     sources:
@@ -9,9 +10,11 @@ addons:
     packages:
     - postgresql-9.5
     - postgresql-contrib-9.5
-  postgresql: 9.5
-addons:
   postgresql: "9.5"
+services:
+  - postgresql
+  - redis-server
+
 before_install:
   - sudo /etc/init.d/postgresql stop
   - sudo apt-get -y remove --purge postgresql-9.1
@@ -33,10 +36,10 @@ before_install:
 install:
   - pip install --process-dependency-links -e .
   - cp portal/application.cfg.travis portal/application.cfg
-script: nosetests -v --with-cover --cover-package=portal
+
 before_script:
  - psql -c 'create database portal_unit_tests owner test_user;' -U postgres
  - celery worker --detach -A portal.celery_worker.celery --loglevel=info
-services:
-  - postgresql
-  - redis-server
+
+script:
+  - nosetests -v --with-cover --cover-package=portal
