--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ addons:
 services:
   - postgresql
   - redis-server
+env:
+  global:
+    - DISPLAY=":99.0"
 
 before_install:
   - sudo service postgresql stop
@@ -37,6 +40,9 @@ install:
 
 before_script:
   - celery worker --detach -A portal.celery_worker.celery --loglevel=info
+
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script:
   - nosetests -v --with-cover --cover-package=portal
