Add test environment for documentation generation

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py35,pypy
+envlist = py27,py35,pypy,docs
 skip_missing_interpreters = True
 
 [testenv]
@@ -7,3 +7,7 @@ deps = .[dev]
 commands = nosetests -v --with-cover --cover-package=portal []
 install_command = pip install --process-dependency-links .[dev] {opts} {packages}
 passenv = TRAVIS_* SAUCE_* SQLALCHEMY_DATABASE_URI
+
+[testenv:docs]
+changedir = docs
+commands = make html
