Remove redundant required dependency info

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ skip_missing_interpreters = True
 [testenv]
 deps = .[dev]
 commands = nosetests -v --with-cover --cover-package=portal []
-install_command = pip install --process-dependency-links .[dev] {opts} {packages}
 passenv = TRAVIS_* SAUCE_* SQLALCHEMY_DATABASE_URI
+install_command = pip install --process-dependency-links {opts} {packages}
 
 [testenv:docs]
 changedir = docs
