Move UI/integration testing to separate venv

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,16 @@
 [tox]
-envlist = py27,py35,pypy,docs
+envlist = py27,py35,pypy,docs,ui
 skip_missing_interpreters = True
 
 [testenv]
 deps = .[dev]
-commands = nosetests -v --with-cover --cover-package=portal []
 passenv = TRAVIS_* SAUCE_* SQLALCHEMY_DATABASE_URI
+commands = nosetests -v --with-cover --cover-package=portal --exclude test_integration []
 install_command = pip install --process-dependency-links {opts} {packages}
 
 [testenv:docs]
 changedir = docs
 commands = make html
+
+[testenv:ui]
+commands = nosetests -v --cover-package=portal tests.test_integration []
