Only pass Sauce labs environmental variables to UI/integration testing venv

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,9 @@ skip_missing_interpreters = True
 
 [testenv]
 deps = .[dev]
-passenv = TRAVIS_* SAUCE_* SQLALCHEMY_DATABASE_URI
 commands = nosetests -v --with-cover --cover-package=portal --exclude test_integration []
 install_command = pip install --process-dependency-links {opts} {packages}
+passenv = TRAVIS_* SQLALCHEMY_DATABASE_URI
 
 [testenv:docs]
 changedir = docs
@@ -14,3 +14,4 @@ commands = make html
 
 [testenv:ui]
 commands = nosetests -v --cover-package=portal tests.test_integration []
+passenv = SAUCE_* {[testenv]passenv}
