Use requirements.txt for managing project requirements

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,7 @@ commands =
     bash -c "if [[ -v TRAVIS ]]; then celery worker --detach -A portal.celery_worker.celery --loglevel=info;fi"
 
 [testenv]
-deps = .[dev]
-install_command = pip install --process-dependency-links {opts} {packages}
+deps = -rrequirements.txt
 passenv = TRAVIS* SQLALCHEMY_DATABASE_URI
 whitelist_externals = /bin/bash
 commands =
