Start celery worker before running tests on TravisCI

--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,19 @@ skip_missing_interpreters = True
 
 [testenv]
 deps = .[dev]
-commands = nosetests -v --with-cover --cover-package=portal --exclude test_integration []
 install_command = pip install --process-dependency-links {opts} {packages}
-passenv = TRAVIS_* SQLALCHEMY_DATABASE_URI
+passenv = TRAVIS* SQLALCHEMY_DATABASE_URI
+whitelist_externals = /bin/bash
+commands =
+    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach -A portal.celery_worker.celery --loglevel=info;fi"
+    nosetests -v --with-cover --cover-package=portal --exclude test_integration []
 
 [testenv:docs]
 changedir = docs
 commands = make html
 
 [testenv:ui]
-commands = nosetests -v --cover-package=portal tests.test_integration []
 passenv = SAUCE_* {[testenv]passenv}
+commands =
+    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach -A portal.celery_worker.celery --loglevel=info;fi"
+    nosetests -v --cover-package=portal tests.test_integration []
