Refactor celery check into common base env

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,17 @@
 envlist = py27,py35,pypy,docs,ui
 skip_missing_interpreters = True
 
+[base]
+commands =
+    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach -A portal.celery_worker.celery --loglevel=info;fi"
+
 [testenv]
 deps = .[dev]
 install_command = pip install --process-dependency-links {opts} {packages}
 passenv = TRAVIS* SQLALCHEMY_DATABASE_URI
 whitelist_externals = /bin/bash
 commands =
-    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach -A portal.celery_worker.celery --loglevel=info;fi"
+    {[base]commands}
     nosetests -v --with-cover --cover-package=portal --exclude test_integration []
 
 [testenv:docs]
@@ -18,5 +22,5 @@ commands = make html
 [testenv:ui]
 passenv = SAUCE_* {[testenv]passenv}
 commands =
-    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach -A portal.celery_worker.celery --loglevel=info;fi"
+    {[base]commands}
     nosetests -v --cover-package=portal tests.test_integration []
