Use sphinx-build to test docgen creation; do not save generated documents

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
 
 [testenv:docs]
 changedir = docs
-commands = make html
+commands = sphinx-build -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
 
 [testenv:ui]
 passenv = SAUCE_* {[testenv]passenv}
