Turn sphinx-build warnings into errors

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands =
 
 [testenv:docs]
 changedir = docs
-commands = sphinx-build -n -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
+commands = sphinx-build -W -n -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
 
 [testenv:ui]
 passenv = SAUCE_* {[testenv]passenv}
