--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
 
 [testenv]
 deps = -rrequirements.txt
-passenv = TRAVIS* SQLALCHEMY_DATABASE_URI
+passenv = TRAVIS* SQLALCHEMY_DATABASE_URI LOG_FOLDER
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
