--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 sudo: true
+# See https://github.com/travis-ci/travis-ci/issues/4264
+# When implementation on container-based infrastructure is finished remove "sudo: true"
 dist: trusty
 language: python
 python:
