--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ kombu==3.0.35
 Mako==1.0.4
 MarkupSafe==0.23
 nose==1.3.7
-oauthlib==2.0.0
+oauthlib==1.1.2 # pyup: <= 1.1.2  # See oauthlib comment below
 page-objects==1.1.0
 passlib==1.6.5
 pkginfo==1.3.2
@@ -73,3 +73,16 @@ Werkzeug==0.11.11
 WTForms==2.1
 xvfbwrapper==0.2.8
 -e .
+
+###
+## Comments too large for inline above
+#
+# oauthlib: Version 2.0.0 broke intervention login, when an intervention cookie
+#           bearer token reference a different user.
+#           To test (in single browser):
+#             - login to SS
+#             - obtain OAuth bearer token from SS on intervention
+#             - return to SS & logout (don't handle logout event from
+#               intervention, i.e. keep cookie)
+#             - login to SS as different user
+#             - try to access intervention and boom.
