--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alabaster==0.7.9
 alembic==0.8.8
 amqp==2.1.0
 anyjson==0.3.3
+argcomplete==1.5.1
 Authomatic==0.1.0.post1
 Babel==2.3.4
+backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.1
 beautifulsoup4==4.5.1
 billiard==3.5.0.1
@@ -14,6 +16,7 @@ click==6.6
 CommonMark==0.5.4 # pyup: <=0.5.4  # pin as workaround to https://github.com/rtfd/recommonmark/issues/24
 coverage==4.2
 decorator==4.0.10
+docopt==0.6.2
 docutils==0.12
 Flask==0.11.1
 Flask-Babel==0.11.1
@@ -23,6 +26,7 @@ Flask-Mail==0.9.1
 Flask-Migrate==2.0.0
 Flask-OAuthlib==0.9.3
 Flask-Script==2.0.5
+Flask-Session==0.3.0
 Flask-SQLAlchemy==2.1
 flask-swagger==0.2.13
 Flask-Testing==0.6.1
@@ -30,8 +34,14 @@ Flask-Testing==0.6.1
 Flask-WebTest==0.0.7
 Flask-WTF==0.13.1
 functools32==3.2.3.post2
+future==0.15.2
+fuzzywuzzy==0.12.0
 imagesize==0.7.1
+ipdb==0.10.0
+ipython==4.2.0
+ipython-genutils==0.1.0
 itsdangerous==0.24
+jedi==0.9.0
 Jinja2==2.8
 jsonschema==2.5.1
 kombu==3.0.37
@@ -41,15 +51,24 @@ nose==1.3.7
 oauthlib==1.1.2 # pyup: <= 1.1.2  # See oauthlib comment below
 page-objects==1.1.0
 passlib==1.6.5
+pathlib2==2.1.0
+pexpect==4.1.0
+pickleshare==0.7.2
 pkginfo==1.3.2
 pluggy==0.4.0
+prompt-toolkit==1.0.8
 psycopg2==2.6.2
+ptpython==0.36
+ptyprocess==0.5.1
 py==1.4.31
 pycparser==2.16
 pycrypto==2.6.1
+pyflakes==1.1.0
 Pygments==2.1.3
+pytest==3.0.3
 python-dateutil==2.5.3
 python-editor==1.0.1
+python-Levenshtein==0.12.0
 pytz==2016.7
 PyYAML==3.12
 recommonmark==0.4.0
@@ -57,16 +76,21 @@ redis==2.10.5
 requests==2.11.1
 requests-oauthlib==0.7.0
 selenium==3.0.1
+simplegeneric==0.8.1
 six==1.10.0
 snowballstemmer==1.2.1
+speaklater==1.3
 Sphinx==1.4.8
 sphinx-rtd-theme==0.1.9
 SQLAlchemy==1.1.2
 swagger-spec-validator==2.0.2
 tox==2.4.1
+traitlets==4.2.1
 validators==0.10.1 # pyup: <=0.10.1 # pin until require_tld supported again
+vine==1.1.2
 virtualenv==15.0.3
 waitress==1.0.0
+wcwidth==0.1.7
 WebOb==1.6.2
 WebTest==2.0.23
 Werkzeug==0.11.11
