--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ itsdangerous==0.24
 jedi==0.9.0
 Jinja2==2.8
 jsonschema==2.5.1
-kombu==3.0.37
+kombu==3.0.37 # pyup: <= 3.0.37  # Pin until celery updates; see https://github.com/uwcirg/true_nth_usa_portal/pull/168
 Mako==1.0.4
 MarkupSafe==0.23
 nose==1.3.7
