--- a/debian/rules
+++ b/debian/rules
@@ -4,4 +4,5 @@ distclean:
 %:
 	dh $@ --with python-virtualenv
 override_dh_virtualenv:
-	dh_virtualenv --no-test
+	dh_virtualenv \
+        --no-test
