Require newer versions of pip and setuptools before attempting build

--- a/debian/rules
+++ b/debian/rules
@@ -5,4 +5,6 @@ distclean:
 	dh $@ --with python-virtualenv
 override_dh_virtualenv:
 	dh_virtualenv \
-        --no-test
+		--preinstall='pip>=8' \
+		--preinstall='setuptools>=12' \
+		--no-test
