--- a/debian/rules
+++ b/debian/rules
@@ -4,13 +4,18 @@ distclean:
 	rm -Rf build debian/portal/ env
 
 override_dh_virtualenv:
+	# Remove this section and requirements.build.txt when dh-virtualenv >= 0.8
 	cp requirements.txt requirements.backup.txt
 	cat requirements.build.txt requirements.backup.txt > requirements.txt
+
 	dh_virtualenv \
 		--preinstall='pip>=8' \
 		--preinstall='setuptools>=12' \
 		--no-test
+		# Enable when dh-virtualenv >= 0.8
+		# --extra-pip-arg='--no-binary=:all:'
 
+# Remove when dh-virtualenv >= 0.8
 override_dh_builddeb:
 	dh_builddeb
 	if [ -f requirements.backup.txt ]; then mv requirements.backup.txt requirements.txt; fi;
