--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: portal
 Section: python
 Priority: extra
 Maintainer: CIRG, University of Washington <truenth-dev@uw.edu>
-Build-Depends: debhelper (>= 9), python, dh-virtualenv (>= 0.7), libc6-i386, fakeroot
+Build-Depends: debhelper (>= 9), python, dh-virtualenv, libc6-i386, fakeroot
 Standards-Version: 3.9.5
 
 Package: portal
