--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,7 @@ PyYAML==3.12
 recommonmark==0.4.0
 redis==2.10.5
 requests==2.11.1
+requests-cache==0.4.12
 requests-oauthlib==0.7.0
 selenium==3.0.1
 simplegeneric==0.8.1
