--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-DH_VIRTUALENV_VERSION = $(shell dh_virtualenv --version | cut -d ' ' -f 2)
+DH_VIRTUALENV_VERSION = $(shell dpkg-query --showformat='$${Version}' --show dh-virtualenv)
 DH_VIRTUALENV_ARGS = --preinstall='pip>=8' --preinstall='setuptools>=12'
 
 ifeq ($(shell dpkg --compare-versions "$(DH_VIRTUALENV_VERSION)" "ge" "0.7"; echo $$?),0)
