--- a/debian/rules
+++ b/debian/rules
@@ -21,12 +21,14 @@ override_dh_virtualenv:
 
 
 override_dh_builddeb:
-# Manually fix VIRTUAL_ENV path for old dh-virtualenv versions (missing fix_activate_path)
+# Fix references to build environment
 # Todo: move to more appropriate step
 ifeq ($(shell dpkg --compare-versions "$(DH_VIRTUALENV_VERSION)" "lt" "0.11"; echo $$?),0)
-	sed -i \
-	'/VIRTUAL_ENV=/c\VIRTUAL_ENV=/usr/share/python/portal' \
-	debian/portal/usr/share/python/portal/bin/activate
+	sed \
+		--in-place \
+		's|/home/travis/build/ivan-c/true_nth_usa_portal/debian/portal/|/|g' \
+		debian/portal/usr/share/python/portal/bin/activate*
+
 endif
 
 	dh_builddeb
