--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,8 @@ before_deploy:
     ' "$PORTAL_VERSION"
     > "${TRAVIS_BUILD_DIR}/bintray.json"
   - docker build --file docker/build --tag "portal_builddeb:test" .
+  - docker cp $(docker ps --latest --quiet):/tmp/artifacts /tmp
+  - cp /tmp/artifacts/* ../
 
 # Only deploy from default virtual env TravisCI job
 deploy:
