--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -39,12 +39,10 @@ RUN pip install make-deb
 
 RUN mkdir -p /tmp/artifacts
 
-RUN git clone --branch feature/deb-packaging https://github.com/ivan-c/true_nth_usa_portal.git /root/portal
-
-WORKDIR /root/portal
-
-RUN yes | make-deb
-RUN git checkout debian/rules
-
-RUN dpkg-buildpackage -us -uc
-RUN cp /root/portal_* /tmp/artifacts
+CMD \
+	git clone --branch feature/deb-packaging https://github.com/ivan-c/true_nth_usa_portal.git /root/portal && \
+	cd /root/portal && \
+	yes | make-deb && \
+	git checkout debian/rules && \
+	dpkg-buildpackage -us -uc && \
+	mv /root/portal_* /tmp/artifacts
