--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,9 +22,9 @@ ENV \
     PROJECT_DIR="/opt/venvs/portal" \
     LOG_FOLDER="/tmp/shared_service_log" \
     PERSISTENCE_FILE="https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/da53ab8e627f850e44af31cad169826b2bbcbb49/site_persistence_file.json" \
-    SQLALCHEMY_DATABASE_URI="postgresql://postgres:5s480OFh@172.17.0.2/postgres" \
-    CELERY_BROKER_URL="redis://172.17.0.3:6379/0" \
-    SESSION_REDIS="172.17.0.3:6379"
+    SQLALCHEMY_DATABASE_URI="postgresql://postgres:@postgres/postgres" \
+    CELERY_BROKER_URL="redis://redis:6379/0" \
+    SESSION_REDIS="redis:6379"
 COPY manage.py ${PROJECT_DIR}/bin
 RUN mkdir -p ${LOG_FOLDER}
 
