--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -18,3 +18,8 @@ services:
     image: postgres
     ports:
       - "5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+volumes:
+  postgres-data:
+    driver: local
