Add documentation comments

--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -1,7 +1,22 @@
+# .deb building Dockerfile
+# This Dockerfile will build an image that can be used to create a debian package from latest code in the develop branch. The completed debian package will need to be copied off the image after creation (see below invocation)
+
+# Build the image for creating the package
+# docker build --file docker/Dockerfile.build --tag "portal_builddeb:test" .
+
+# Build the image
+# docker run "portal_builddeb:test"
+
+# Copy the debian package from the image to the container host
+# docker cp $(docker ps --quiet --latest --filter ancestor="portal_builddeb:test"):/tmp/artifacts /tmp
+# cp /tmp/artifacts/*.deb ./
+
 FROM debian:jessie
 
 ENV DEBIAN_FRONTEND noninteractive
 
+# Use newest version of dh-virtualenv from testing release
+# Todo: try specifying version in `apt-get install` invocation
 RUN echo '\n\
 Package: dh-virtualenv\n\
 Pin: release a=testing\n\
@@ -39,6 +54,7 @@ RUN pip install make-deb
 
 RUN mkdir -p /tmp/artifacts
 
+# Todo: allow branch to be overridden
 CMD \
 	git clone --branch feature/deb-packaging https://github.com/ivan-c/true_nth_usa_portal.git /root/portal && \
 	cd /root/portal && \
